@@ -5,6 +5,8 @@
 	 * updates to address warnings and compile errors with the SunPro
 	   compiler
 	 * fixed bugs in flexible/extensible type matching support
+	 * fixed internal APIs and added supoprt for caching lookup maps from
+	   externally-implemented types and type information
 
 2010.02.11: David Nichols
 	 * fine-tuned overload patching at parse and runtime to allow for more
